# super-claudio-code

./: .gitignore  README.md  install.js  notes.txt  package-lock.json  package.json
.claude-plugin/: plugin.json
.claude/learnings/config/: learnings-config.md
agents/: archivist.md  cleanup.md
hooks/: context-monitor.js  hooks.json  pre-compact.js  session-start.js  stop.js  task-completed.js  teammate-idle.js  user-prompt-submit.js
hooks/agents/: archivist.md  cleanup.md
plan/plan-framework/: handoff.md  plan.md
research/: compound-engineering.md  everything-claude-code.md  get-shit-done.md  gsd-tdd-deep-dive.md  gstack.md  openspec-tdd-analysis.md  openspec.md  search-mcp-analysis.md  spec-kit-tdd-analysis.md  spec-kit.md  superpowers-tdd-deep-dive.md  superpowers.md  synthesis.md  tdd-ai-agents.md  tdd-synthesis.md
skills/agent-teams/: SKILL.md
skills/brainstorming/: SKILL.md
skills/implementation/: SKILL.md
skills/implementation/references/: escalation-reference.md
skills/learning-capture/: SKILL.md
skills/planning/: SKILL.md
skills/planning/references/: multi-session.md
skills/tdd/: SKILL.md
src/: cli.js
src/commands/: init.js  learning-list.js  plan-init.js  status.js
tools/search-mcp/: docker-compose.yml  extractor.py  pyproject.toml  searcher.py  server.py
tools/search-mcp/searxng/: settings.yml
