[project]
name = "search-mcp"
version = "0.1.0"
description = "Open source MCP search server: SearXNG + trafilatura + BM25"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "trafilatura>=2.0.0",
    "rank-bm25>=0.2.2",
]

[project.scripts]
search-mcp = "server:main"
